blue-green/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blue-green-virtualservice
spec:
  hosts:
    - localhost
  http:
    - route:
        - destination:
            host: blue-green-guestbook-helm-guestbook  # Blue 
          weight: 90
        - destination:
            host: blue-green-guestbook-helm-guestbook-preview  # Green 
          weight: 10
